--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  v3.2-pre.tar.gz: 290151b734fee19accf7f771380d466171e2b917
+  mozjpeg-3.2.tar.gz: da2106543d82bfa51fb51e5d4b53397ac28ac87b
