Update to current git to get TurboJPEG 1.5 features

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  mozjpeg-3.3.1.tar.gz: 1a4be569d62f51e1377e46b8b22b6a64fb121794
+  v3.3.2-20180802.tar.gz: af25eb611f0fbc59135df1dab66135ad002ef850
