--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  v3.3.2-20181202.tar.gz: 632510208c3783aaf957fde0d547b20be3773748
+  mozjpeg-4.0.3.tar.gz: 8e9272a8ec1429638febd6897664c575bdd50ecb
